[package]
name = "ghw-sys"
version = "0.1.0"
authors = ["Oscar Gustafsson <oscar.gustafsson@gmail.com>"]
edition = "2018"
description = "Bindings for GHDL GHW file manipulation API."
include = ["src/*", "tests/*.rs", "build.rs", "Cargo.toml", "assets/*.c", "assets/*.h"]
categories = ["external-ffi-bindings" ]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"
