[package]
name = "rs-ghw"
version = "0.1.0"
authors = ["Oscar Gustafsson <oscar.gustafsson@gmail.com>"]
edition = "2018"
license = "EUPL-1.2"
description = "GHDL GHW library."
include = ["src/*.rs", "tests/*.rs", "build.rs", "Cargo.toml", "assets/*.fst"]
categories = ["external-ffi-bindings" ]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghw-sys = {path = "ghw-sys"}
